--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Krub&display=swap" rel="stylesheet">
+    <script src="main.js"></script>
 
 </head>
 
@@ -18,6 +19,7 @@
     <h1>Quizzing</h1>
 
     <form id="quiz" name="quiz">
+
         <p>What is the color the sky?</p>
         <input type="radio" id="mc" name="question1" value="Blue">Blue <br>
         <input type="radio" id="mc" name="question1" value="Green">Green <br>
@@ -39,10 +41,11 @@
     </form>
 
     <div id="quiz-submit">
-        <p id="number_of_correct_answer">Quiz Completed</p>
+        <p id="message"></p>
+        <p id="number_of_correct_answer"></p>
     </div>
 
-    <script src="main.js"></script>
+   
 
 </body>
 
