--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <div id="quiz-submit">
         <p id="message"></p>
         <p id="number_of_correct_answer"></p>
+        <img id="picture">
     </div>
 
    
