--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Quiz</title>
+    <title>Basic-Quiz</title>
 
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Krub&display=swap" rel="stylesheet">
